--- a/py_ext/Makefile.am
+++ b/py_ext/Makefile.am
@@ -1,2 +1,8 @@
 all-local:
 	CFLAGS="$(CFLAGS) -I../src/lib -fno-strict-aliasing" $(PYTHON) setup.py build
+
+install:
+	$(PYTHON) setup.py install
+
+clean:
+	$(PYTHON) setup.py clean --all
